Project Shelves {
    database_type: 'PostgreSQL'
    Note: '''
        # Twitter Bookmark Database
    '''
}

Table "Users" {
    "user_id" SERIAL [pk, increment]
    "username" VARCHAR(20) [not null]
    "password" VARCHAR(255) [not null]
    "profile_picture_url" VARCHAR(255)
}

Table "Bookmark_list" {
    "id" SERIAL [pk, increment]
    "user_id" INTEGER
    "tweet_id" INTEGER
    "datetime_added" TIMESTAMP [not null]
    "tags" VARCHAR(255)
}

Table "Posts" {
    "tweet_id" SERIAL [pk, increment]
    "content" TEXT [not null]
    "which_user" VARCHAR(20) [not null]
    "post_image_url" VARCHAR(255)
}

Ref:"Users"."user_id" < "Bookmark_list"."user_id"
Ref:"Posts"."tweet_id" < "Bookmark_list"."tweet_id"
